# Slay_the_Spire_2_rl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agent/: bridge_server.py  config.py  evaluate.py  model_paths.py  network.py  runtime.py  train.py
bridge/: bridge_client.py  control_state.py
data/: bridge_training_gap_report.json  cards.json  characters.json  encounters.json  events.json  monsters.json  potions.json  relics.json
decompiled/: sts2.csproj
decompiled/MegaCrit.Sts2.Core.Nodes.Cards/: NCard.cs
decompiled/MegaCrit.Sts2.Core.Nodes.Combat/: NEnemyTurnBanner.cs  NEnergyCounter.cs  NHealthBar.cs  NPingButton.cs  NPlayerTurnBanner.cs  NPower.cs  NStarCounter.cs
decompiled/MegaCrit.Sts2.Core.Nodes.CommonUi/: NTopBar.cs
decompiled/MegaCrit.Sts2.Core.Nodes.Debug/: NDebugInfoLabelManager.cs  NDevConsole.cs
decompiled/MegaCrit.Sts2.Core.Nodes.Events/: NAncientDialogueLine.cs
decompiled/MegaCrit.Sts2.Core.Nodes.GodotExtensions/: NClickableControl.cs  NDropdown.cs  (+2 more)
game_mod/: README.md  deploy_mod.ps1
scripts/: audit_bridge_training_coverage.py  bridge_server.py  bridge_ui.py  evaluate_all.py  extract_data.py  run_pipeline.py  train_all.py  train_defect.py  train_ironclad.py  train_necrobinder.py  train_regent.py  train_silent.py  training_ui.py
smoke/: latest_live_summary.json
sts_env/: __init__.py  archetypes.py  card_effects.py  combat.py  combat_scoring.py  encoding.py  env.py  events.py  game_state.py  map_gen.py  monster_ai.py  powers.py  rewards.py
tests/: test_cards.py  test_combat.py  test_env.py  test_training_entry.py
(+71 files in other folders)
