[project]
name = "sts2-agent"
version = "0.1.0"
description = "Reinforcement Learning agent for Slay the Spire 2"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
    "torch>=2.0",
    "numpy>=1.24",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
bridge = ["websockets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
